# fatrat-chrome

./: CMakeLists.txt  config.h.in
data/: package.sh
data/fatrat-chrome/: background.html  content_script.js  fatrat.js  manifest.json
src/: np_entry.cpp  npn_gate.cpp  npp_gate.cpp  plugin.cpp  plugin.h
